--- a/css/styles.css
+++ b/css/styles.css
@@ -587,3 +587,20 @@ transition:transform .3s ease-out;
 	width:auto;
 	margin:10px
 }
+.addrequestAdvancelogo {
+	background-image: url("../images/rquestAdavnce.png");
+	background-repeat: no-repeat;
+	width: 55px;
+	height: 55px;
+	margin-top: 15%;
+	margin-bottom: 3%;
+    margin-left: 30%;
+	margin-right: 70px;
+}
+
+.emplAdvVoucherNo{
+    width: 58.5%;   
+}
+.table1 {
+    margin-bottom: 0px;
+}
